# tbamud_adventurers_lair

./: .gitignore  CMakeLists.txt  README.md  config.status  diag_login_creates_newchar.sh  rebuild_player_index.sh  syslog
backups_add_worth_balance_20251230_061014/: interpreter.c
backups_add_worth_balance_v2_20251230_061826/: act.informative.c
backups_align_formats_20251230_001245/: act.other.c
backups_currency2_20251230_020444/: act.informative.c  act.item.c  fight.c  handler.c
backups_currency3_20251230_025434/: act.item.c  fight.c
backups_currency_20251230_020416/: limits.c  players.c  structs.h
backups_fix_ll_format_warnings_v2_20260103_031310/: act.wizard.c.bak  objsave.c.bak  shop.c.bak
backups_fix_ll_format_warnings_v2_20260103_031416/: act.wizard.c.bak  genmob.c.bak  medit.c.bak  shop.c.bak
backups_fix_ll_format_warnings_v3_20260103_031851/: objsave.c.bak
backups_fix_ll_gold_formats_20260103_030415/: act.informative.c.bak  dg_variables.c.bak  shop.c.bak  (+1 more)
src/: .gitignore  CMakeLists.txt  Makefile  accounts.c  accounts.h  act.clan.c  act.h  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.wizard.c  asciimap.c  clan.c  clan.h  class.c  class.h  comm.c  conf.h  config.c  constants.c  criticalhits.c  criticalhits.h  db.c  db.h  dg_misc.c  dg_mobcmd.c  fight.c  fight.h  genmob.c  genolc.c  handler.c  handler.h  interpreter.c  limits.c  magic.c  medit.c  medit.c.bad_truncated_20260105_051136  medit.c.pre_restore_20260105_051234  (+30 more)
src/util/: CMakeLists.txt  Makefile  asciipasswd.c  plrtoascii.c  strlcpy.c
(+32 files in other folders)
